# charter-parser-test

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  EVAL.md  FINAL_REPORT.md  Makefile  PLANS.md  README.md  TASK.md  pyproject.toml
artifacts/golden/: README.md  clauses_merged.json
configs/: default.yaml
docs/: AGENT_RUN.md  architecture.md  codex_runbook.md  problem_cases.md
legacy/: README.md  _part1_extractor.py  _part2_extractor.py  deep-research-report.md
prompts/: system_line_selector.md  system_page_repair.md
schemas/: adjudication_report.schema.json  adjudication_result.schema.json  ambiguity_case.schema.json  assembly_report.schema.json  candidate_blocks.schema.json  candidate_report.schema.json  clauses.schema.json  clauses_unified.schema.json  eval_report.schema.json  layout_profile.schema.json  line_selection.schema.json  page_ir.schema.json  run_report.schema.json
scripts/: download_source_pdf.sh  eval_against_reference.py  final_errors_vs_golden.py  generate_manual_priority_cases.py
src/charter_parser/: __init__.py  adjudication.py  assembly.py  candidate_generation.py  cli.py  config.py  ir.py  layout_profile.py  models.py  pdf_backend.py  pipeline.py  reporting.py  schema_tools.py  strike_filter.py  utils.py  validators.py
src/charter_parser/llm/: __init__.py  client.py  (+1 more)
submission/: final_clauses.json  final_eval_report.json  final_eval_report.md
tests/: test_adjudication.py  test_assembly.py  test_candidate_generation.py  test_config.py  test_layout_profile.py  test_pipeline.py  test_schema.py  test_validators.py
